# netherica

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_TASKS.md  LICENSE  Netherica_rqrmnt.md  PATCHING_TASKs.md  README.md  WAITING.md  coder_handoff.md  config.toml  issued_calculation_patching_tasks.md  leftover_fix_tasks.md  report_fix_tasks.md  ui_rework_task.md
.agents/skills/api-security-best-practices/: SKILL.md
.agents/skills/architecture-decision-records/: SKILL.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/concise-planning/: SKILL.md
.agents/skills/data-engineer/: SKILL.md
.agents/skills/docs-architect/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
.agents/skills/git-pushing/: SKILL.md
.agents/skills/kaizen/: SKILL.md
.agents/skills/lint-and-validate/: SKILL.md
.agents/skills/mcp-builder/: SKILL.md
.gemini/scratch/: depmap.md  phase12.md  phase12_linear.md  phase13.md  replace_section7.ps1
.opencode/agents/: architect.md  engineer.md  qa_compiler.md
asset/templates/: report.html.tera
gui_rework_task/: ui_rework_task_step_1.md  ui_rework_task_step_2.md  ui_rework_task_step_3.md  ui_rework_task_step_4.md  ui_rework_task_step_5.md  ui_rework_task_step_6.md  ui_rework_task_step_7.md  ui_rework_task_step_8.md  ui_rework_task_step_9.md
scripts/: build-linux-musl.sh  build-windows-msvc.ps1
src/: config.rs  db.rs  domain.rs  error.rs  ingestion.rs  logging.rs  main.rs  models.rs  report.rs  repository.rs  storage.rs
src/ui/: components.rs  mod.rs  sidebar.rs  theme.rs  worker.rs
src/ui/views/: complete.rs  (+6 more)
(+3 files in other folders)
