[package]
name = "netherica"
version = "0.2.2"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = "0.28"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = { version = "0.34", features = ["dates"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
tera = "1.20"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
rust-embed = "8.11"
base64 = "0.22"
egui_extras = "0.28"
encoding_rs = "0.8"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
dirs = "6.0.0"

[dev-dependencies]
rust_xlsxwriter = "0.79"
tempfile = "3.13"
